// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomationSubscriptionDescription /> should render a discounted price for customers with automation add-on discount 1`] = `
<div
  class="description"
>
  <div
    class="flex"
  >
    <div>
      Your current subscription started on
       
      <b>
        Aug 23
      </b>
      .
      <br />
      <br />
      The change in your subscription will take effect at the end of your billing cycle. If you cancel, you will lose access to Automation Add-on as soon as the change is effective.
    </div>
    <div
      class="amountWrapper amount"
    >
      <span
        class="amount"
      >
        <span
          class="fullAmount"
        >
          $30
        </span>
        <wbr />
        <b>
          $15
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
</div>
`;

exports[`<AutomationSubscriptionDescription /> should render for customers already with full add-on features 1`] = `
<div
  class="description"
>
  <div
    class="flex"
  >
    <div>
      Your current subscription started on
       
      <b>
        Aug 23
      </b>
      .
      <br />
      <br />
      The change in your subscription will take effect at the end of your billing cycle. If you cancel, you will lose access to Automation Add-on as soon as the change is effective.
    </div>
    <div
      class="amountWrapper amount"
    >
      <span
        class="amount"
      >
        <b>
          $30
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
</div>
`;

exports[`<AutomationSubscriptionDescription /> should render for customers with legacy automation add-on 1`] = `
<div
  class="description"
>
  <div
    class="flex"
  >
    <div>
      Unlock advanced features of the Automation Add-on, and track the performance!
      <br />
      Questions?
       
      <a
        href="mailto:support@gorgias.com"
      >
        <b>
          Get in touch!
        </b>
      </a>
    </div>
    <div
      class="amountWrapper amount"
    >
      <span
        class="amount"
      >
        <b>
          $15
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
  <div
    class="features"
  >
    <li
      class="d-flex align-items-center"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons-outlined"
        >
          slow_motion_video
        </i>
      </span>
      <span>
        Provide customers with automated answers to common questions with 
        <b>
          quick response flows
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          low_priority
        </i>
      </span>
      <span>
        Allow customers to manage their orders with
         
        <b>
          order management flows
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          article
        </i>
      </span>
      <span>
        Automatically answer customer questions with help center
         
        <b>
          article recommendation
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          insights
        </i>
      </span>
      <span>
        Track customer interactions and your automation rate with
         
        <b>
          advanced statistics
        </b>
      </span>
    </li>
  </div>
</div>
`;

exports[`<AutomationSubscriptionDescription /> should render for customers without any addon features 1`] = `
<div
  class="description"
>
  <div
    class="badge"
  >
    <i
      class="icon material-icons"
    >
      auto_awesome
    </i>
    <span>
      Access these features and more with the Automation Add-on!
    </span>
  </div>
  <div
    class="flex"
  >
    <div>
      Add advanced automation features and automate up to 20% of all interactions.
      <br />
      <a
        href="https://app.livestorm.co/gorgias-1/automaton-add-on-workshop?utm_source=candu&utm_medium=in_product&utm_campaign=homepage_addon"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </div>
    <div
      class="amountWrapper amount"
    >
      <span
        class="amount"
      >
        <b>
          $30
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
  <div
    class="features"
  >
    <li
      class="d-flex align-items-center"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons-outlined"
        >
          slow_motion_video
        </i>
      </span>
      <span>
        Provide customers with automated answers to common questions with 
        <b>
          quick response flows
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          low_priority
        </i>
      </span>
      <span>
        Allow customers to manage their orders with
         
        <b>
          order management flows
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          article
        </i>
      </span>
      <span>
        Automatically answer customer questions with help center
         
        <b>
          article recommendation
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          insights
        </i>
      </span>
      <span>
        Track customer interactions and your automation rate with
         
        <b>
          advanced statistics
        </b>
      </span>
    </li>
  </div>
</div>
`;
